--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
     "neon-elements": "PolymerElements/neon-elements#1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
-    "google-calendar": "GoogleWebComponents/google-calendar#^1.0.0"
+    "google-calendar": "GoogleWebComponents/google-calendar#^1.0.0",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.0"
   },
   "devDependencies": {
     "web-component-tester": "*",
