--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "page": "visionmedia/page.js#~1.6.3",
     "google-calendar": "GoogleWebComponents/google-calendar#^1.0.0",
     "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.0",
-    "iron-image": "PolymerElements/iron-image#^1.0.0"
+    "iron-image": "PolymerElements/iron-image#^1.0.0",
+    "paper-item": "PolymerElements/paper-item#^1.0.0"
   },
   "devDependencies": {
     "web-component-tester": "*",
